[tool.poetry]
name = "sample-agent"
version = "0.1.0"
description = "An AI agent framework using PydanticAI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic-ai = "^0.0.52"
openai = "^1.70.0"
prettytable = "^3.0.0"
fastapi = "^0.115.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"